Fixed div tag typo on line 52

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="row navigation">
         <div class="span2 logo">
           Logo
-        </idv>
+        </div>
         <div class="span6 blank">
           Blank
         </div>
