Fixed thermometer class name typo on line 36

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         line-height: 124px;
       }
 
-      .thermometrer, .order, .social {
+      .thermometer, .order, .social {
         /* line-height to vertically center: http://phrogz.net/css/vetical-align/index.html */
         height: 40px;
         line-height: 40px;
