--- a/index.html
+++ b/index.html
@@ -219,7 +219,9 @@
             <div class="span6 offset3 order">
               <!-- Standard bootstrap button. -->
               <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-              <button class="btn btn-success btn-large">Preorder</button>
+              <button class="btn btn-success btn-large">
+                <a class="coinbase-button" data-button-text="Preorder with Bitcoin" data-code="7c67b0b6ab821d4cf7268521982b8a8e" data-button-style="custom_large" href="https://coinbase.com/checkouts/7c67b0b6ab821d4cf7268521982b8a8e">Preorder with Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+              </button>
             </div>
           </div>
           <div class="row-fluid">
